--- a/styles_css/index.css
+++ b/styles_css/index.css
@@ -1,23 +1,19 @@
-/* 
-Page de style pour le premier site en html/css.
-NSI Camus 
-*/
-
 body {
   background-image: url("../cosmetics/font.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  font-family: Arial, sans-serif;
   margin: 0; 
   padding: 0;
   min-height: 100vh;  
 }
-
-.profil {  
+a{
   font-family: "Rowdies", sans-serif;
   text-decoration: none;
   color: black;  
+}
+
+.profil {  
   position: absolute;
   top: 20px;
   left: 20px;
